fixed some bugs

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html>
+<html lang="ca">
 
 <head>
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <title>Xat</title>
+  <title>Moimoin</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -18,7 +18,7 @@
 
 <body>
   <div class="header">
-    <div class="xat-logo">XAT AMB SOCKETS</div>
+    <div class="xat-logo">MOIMOIN</div>
     <div id="header-user"></div>
     <div id="header-logout">
       <input type="button" class="button" id="logout" value="Tanca sessió" onclick="logout()">
@@ -39,7 +39,6 @@
       <div id="chat-messages"></div>
       <br>
       <div style="width: 100%; text-align: center;">
-        <!-- <input id="chat-input" type="text" autocomplete="off"> -->
         <textarea rows="1" id="chat-input"></textarea>
         <input id="chat-button" class="button" type="button" value="Enviar">
       </div>
