--- a/client/public/login.html
+++ b/client/public/login.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html>
+<html lang="ca">
 
 <head>
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <title>Xat - Login</title>
+  <title>Moimoin - Login</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link rel="stylesheet" type="text/css" media="screen" href="./css/login.css" />
 </head>
